[package]
name = "tauri-plugin-netwait"
version = "0.1.0"
authors = [ "BGMA" ]
description = "A Tauri plugin for network status monitoring and waiting."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-netwait"

[dependencies]
tauri = { version = "2.9.2" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
tauri-build = "2.5.1"

[target.'cfg(all(not(target_os = "android"), not(target_os = "ios")))'.dependencies]
network-interface = "2.0.3"